--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>
-    <span class="action-span"><a href="__GROUP__/Goods/goodsList">商品列表</a>
+    <span class="action-span"><a href="__ROOT__/admin/goods/lst">商品列表</a>
     </span>
     <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
     <span id="search_id" class="action-span1"> - 添加新商品 </span>
@@ -29,48 +29,18 @@
                     <td><input type="text" name="goods_name" value=""size="30" />
                     <span class="require-field">*</span></td>
                 </tr>
+
                 <tr>
-                    <td class="label">商品货号： </td>
+                    <td class="label">本店价格：</td>
                     <td>
-                        <input type="text" name="goods_sn" value="" size="20"/>
-                        <span id="goods_sn_notice"></span><br />
-                        <span class="notice-span"id="noticeGoodsSN">如果您不输入商品货号，系统将自动生成一个唯一的货号。</span>
+                        <input type="text" name="goods_number" size="8" value=""/>
                     </td>
                 </tr>
                 <tr>
-                    <td class="label">商品分类：</td>
-                    <td>
-                        <select name="cat_id">
-                            <option value="0">请选择...</option>
-                            <foreach name="cat_list" item="val">
-                            <option value="<{$val.cat_id}>"><{$val.lev|str_repeat='&nbsp;&nbsp;',###}><{$val.cat_name}></option>
-                            </foreach>
-                        </select>
-                        <span class="require-field">*</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">商品品牌：</td>
-                    <td>
-                        <select name="brand_id">
-                            <option value="0">请选择...</option>
-                            <foreach name="brand_list" item="val">
-                            <option value="<{$val.brand_id}>"><{$val.brand_name}></option>
-                            </foreach>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">本店售价：</td>
+                    <td class="label">市场价格：</td>
                     <td>
                         <input type="text" name="shop_price" value="0" size="20"/>
                         <span class="require-field">*</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">商品数量：</td>
-                    <td>
-                        <input type="text" name="goods_number" size="8" value=""/>
                     </td>
                 </tr>
                 <tr>
@@ -81,39 +51,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="label">加入推荐：</td>
-                    <td>
-                        <input type="checkbox" name="is_best" value="1" /> 精品 
-                        <input type="checkbox" name="is_new" value="1" /> 新品 
-                        <input type="checkbox" name="is_hot" value="1" /> 热销
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">推荐排序：</td>
-                    <td>
-                        <input type="text" name="sort_order" size="5" value="100"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">市场售价：</td>
-                    <td>
-                        <input type="text" name="market_price" value="0" size="20" />
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">商品关键词：</td>
-                    <td>
-                        <input type="text" name="keywords" value="" size="40" /> 用空格分隔
-                    </td>
-                </tr>
-                <tr>
                     <td class="label">商品图片：</td>
                     <td>
                         <input type="file" name="goods_img" size="35" />
                     </td>
                 </tr>
                 <tr>
-                    <td class="label">商品简单描述：</td>
+                    <td class="label">商品描述：</td>
                     <td>
                         <textarea name="goods_brief" cols="40" rows="3"></textarea>
                     </td>
