--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -33,7 +33,8 @@
                 <tr>
                     <td class="label">本店价格：</td>
                     <td>
-                        <input type="text" name="shop_price" size="8" value=""/>
+                        <input type="text" name="shop_price" value="0" size="20"/>
+                        <span class="require-field">*</span>
                     </td>
                 </tr>
                 <tr>
