变更添加字段

--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -54,7 +54,7 @@
                 <tr>
                     <td class="label">商品图片：</td>
                     <td>
-                        <input type="file" name="goods_img" size="35" />
+                        <input type="file" name="logo" size="60" />
                     </td>
                 </tr>
                 <tr>
