--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP 管理中心 - 添加新商品 </title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="<?=C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css" />
-<link href="<?=C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css" />
+    <title>ECSHOP 管理中心 - 添加新商品 </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link href="<?=C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css"/>
+    <link href="<?=C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <h1>
@@ -26,8 +27,8 @@
             <table width="90%" id="general-table" align="center">
                 <tr>
                     <td class="label">商品名称：</td>
-                    <td><input type="text" name="goods_name" value=""size="30" />
-                    <span class="require-field">*</span></td>
+                    <td><input type="text" name="goods_name" value="" size="30"/>
+                        <span class="require-field">*</span></td>
                 </tr>
 
                 <tr>
@@ -54,26 +55,42 @@
                 <tr>
                     <td class="label">商品图片：</td>
                     <td>
-                        <input type="file" name="logo" size="60" />
+                        <input type="file" name="logo" size="60"/>
                     </td>
                 </tr>
                 <tr>
                     <td class="label">商品描述：</td>
                     <td>
-                        <textarea name="goods_desc" cols="40" rows="3"></textarea>
+                        <textarea id="goods_desc" name="goods_desc" cols="40" rows="3"></textarea>
                     </td>
                 </tr>
             </table>
             <div class="button-div">
                 <input type="submit" value=" 确定 " class="button"/>
-                <input type="reset" value=" 重置 " class="button" />
+                <input type="reset" value=" 重置 " class="button"/>
             </div>
         </form>
     </div>
 </div>
 
 <div id="footer">
-共执行 9 个查询，用时 0.025161 秒，Gzip 已禁用，内存占用 3.258 MB<br />
-版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。</div>
+    共执行 9 个查询，用时 0.025161 秒，Gzip 已禁用，内存占用 3.258 MB<br/>
+    版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。
+</div>
 </body>
 </html>
+
+<!--添加在线编辑器的JS文件-->
+<link href="<?php echo C('UMEDITOR_URL');?>/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
+<script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/jquery.min.js"></script>
+<script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/template.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="<?php echo C('UMEDITOR_URL');?>/umeditor.config.js"></script>
+<script type="text/javascript" charset="utf-8" src="<?php echo C('UMEDITOR_URL');?>/umeditor.min.js"></script>
+<script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/lang/zh-cn/zh-cn.js"></script>
+<script type="text/javascript">
+    //实例化编辑器
+    var um = UM.getEditor('goods_desc', {
+        initialFrameWidth: "100%",//初始化编辑器宽度,默认500
+        initialFrameHeight: 500  //初始化编辑器高度,默认500
+    });
+</script>
