--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP 管理中心 - 商品列表 </title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="<?=C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css" />
-<link href="<?=C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css" />
+    <title>ECSHOP 管理中心 - 商品列表 </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link href="<?=C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css"/>
+    <link href="<?=C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <h1>
-    <span class="action-span"><a href="__GROUP__/Goods/goodsAdd">添加新商品</a></span>
+    <span class="action-span"><a href="__ROOT__/admin/goods/add">添加新商品</a></span>
     <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
     <span id="search_id" class="action-span1"> - 商品列表 </span>
     <div style="clear:both"></div>
 </h1>
 <div class="form-div">
     <form action="" name="searchForm">
-        <img src="<?=C('HOME_IMG_URL');?>/icon_search.gif" width="26" height="22" border="0" alt="search" />
+        <img src="<?=C('HOME_IMG_URL');?>/icon_search.gif" width="26" height="22" border="0" alt="search"/>
         <!-- 分类 -->
         <select name="cat_id">
             <option value="0">所有分类</option>
             <foreach name="cat_list" item="val">
-            <option value="<{$val.cat_id}>"><{$val.lev|str_repeat='&nbsp;&nbsp;',###}><{$val.cat_name}></option>
+                <option value="<{$val.cat_id}>"><{$val.lev|str_repeat='&nbsp;&nbsp;',###}><{$val.cat_name}></option>
             </foreach>
         </select>
         <!-- 品牌 -->
         <select name="brand_id">
             <option value="0">所有品牌</option>
             <foreach name="brand_list" item="val">
-            <option value="<{$val.brand_id}>"><{$val.brand_name}></option>
+                <option value="<{$val.brand_id}>"><{$val.brand_name}></option>
             </foreach>
         </select>
         <!-- 推荐 -->
@@ -44,8 +45,8 @@
             <option value="0">下架</option>
         </select>
         <!-- 关键字 -->
-        关键字 <input type="text" name="keyword" size="15" />
-        <input type="submit" value=" 搜索 " class="button" />
+        关键字 <input type="text" name="keyword" size="15"/>
+        <input type="submit" value=" 搜索 " class="button"/>
     </form>
 </div>
 
@@ -56,51 +57,46 @@
             <tr>
                 <th>编号</th>
                 <th>商品名称</th>
-                <th>货号</th>
-                <th>价格</th>
-                <th>上架</th>
-                <th>精品</th>
-                <th>新品</th>
-                <th>热销</th>
-                <th>推荐排序</th>
-                <th>库存</th>
+                <th>logo</th>
+                <th>市场价格</th>
+                <th>本店价格</th>
+                <th>商家</th>
+                <th>添加时间</th>
                 <th>操作</th>
             </tr>
-            <foreach name="list" item="val">
+            <?php foreach($listData as $k=>$v):?>
             <tr>
-                <td align="center"><{$val.goods_id}></td>
-                <td align="center" class="first-cell"><span><{$val.goods_name}></span></td>
-                <td align="center"><span onclick=""><{$val.goods_sn}></span></td>
-                <td align="center"><span><{$val.shop_price}></span></td>
-                <td align="center"><img src="<if condition='($val.is_onsale eq     1)'> ./Images/yes.gif <else/> ./Images/no.gif </if>"/></td>
-                <td align="center"><img src="<if condition='($val.is_best eq     1)'> ./Images/yes.gif <else/> ./Images/no.gif </if>"/></td>
-                <td align="center"><img src="<if condition='($val.is_new eq     1)'> ./Images/yes.gif <else/> ./Images/no.gif </if>"/></td>
-                <td align="center"><img src="<if condition='($val.is_hot eq     1)'> ./Images/yes.gif <else/> ./Images/no.gif </if>"/></td>
-                <td align="center"><span>100</span></td>
-                <td align="center"><span><{$val.goods_number}></span></td>
+                <td align="center"><?php echo $v['id'];?></td>
+                <td align="center" class="first-cell"><span><?php echo $v['goods_name'];?></span></td>
+                <td align="center"><span><?php echo $v['sm_logo'];?></span></td>
+                <td align="center"><?php echo $v['market_price']; ?></td>
+                <td align="center"><?php echo $v['shop_price']; ?></td>
+                <td align="center"><?php echo $v['is_on_sale']; ?></td>
+                <td align="center"><?php echo $v['addtime']; ?></td>
                 <td align="center">
-                <a href="__APP__/Goods/?goods_id=<{$val.goods_id}>" target="_blank" title="查看"><img src="./Images/icon_view.gif" width="16" height="16" border="0" /></a>
-                <a href="__GROUP__/Goods/goodsEdit?goods_id=<{$val.goods_id}>" title="编辑"><img src="./Images/icon_edit.gif" width="16" height="16" border="0" /></a>
-                <a href="__GROUP__/Goods/goodsTrash?goods_id=<{$val.goods_id}>" onclick="" title="回收站"><img src="./Images/icon_trash.gif" width="16" height="16" border="0" /></a></td>
+                    <a href="<?php echo U('edit?id='.$v['id']); ?>">修改</a>
+                    <a onclick="return confirm('确定要删除吗？');" href="<?php echo U('delete?id='.$v['id']); ?>">删除</a>
+                </td>
             </tr>
-            </foreach>
+            <?php endforeach;?>
         </table>
 
-    <!-- 分页开始 -->
+        <!-- 分页开始 -->
         <table id="page-table" cellspacing="0">
             <tr>
-                <td width="80%">&nbsp;</td>
+                <td width="80%">&nbsp</td>
                 <td align="center" nowrap="true">
-                    <{$showPage}>
+                    <?php echo $page?>
                 </td>
             </tr>
         </table>
-    <!-- 分页结束 -->
+        <!-- 分页结束 -->
     </div>
 </form>
 
 <div id="footer">
-共执行 7 个查询，用时 0.028849 秒，Gzip 已禁用，内存占用 3.219 MB<br />
-版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。</div>
+    共执行 7 个查询，用时 0.028849 秒，Gzip 已禁用，内存占用 3.219 MB<br/>
+    版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。
+</div>
 </body>
 </html>
