--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -48,8 +48,8 @@
                 <tr>
                     <td class="label">是否上架：</td>
                     <td>
-                        <input type="radio" name="is_on_sale" value="1"/> 是
-                        <input type="radio" name="is_on_sale" value="0"/> 否
+                        <input type="radio" name="is_on_sale" value="是"/> 是
+                        <input type="radio" name="is_on_sale" value="否"/> 否
                     </td>
                 </tr>
                 <tr>
