--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -68,7 +68,7 @@
             <tr>
                 <td align="center"><?php echo $v['id'];?></td>
                 <td align="center" class="first-cell"><span><?php echo $v['goods_name'];?></span></td>
-                <td align="center"><span><?php echo $v['sm_logo'];?></span></td>
+                <td align="center"><img src="/Public/Uploads/<?php echo($v['sm_logo']);?>"/></td>
                 <td align="center"><?php echo $v['market_price']; ?></td>
                 <td align="center"><?php echo $v['shop_price']; ?></td>
                 <td align="center"><?php echo $v['is_on_sale']; ?></td>
