--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -110,7 +110,7 @@
 </html>
 
 <!-- 引入时间插件 -->
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.0/jquery.min.js"></script>
+<script type="text/javascript" src="<?php echo C('DATETIMEPICKER_URL');?>/jquery-1.7.2.min.js"></script>
 <link href="<?php echo C('DATETIMEPICKER_URL');?>/jquery-ui-1.9.2.custom.min.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" charset="utf-8" src="<?php echo C('DATETIMEPICKER_URL');?>/jquery-ui-1.9.2.custom.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="<?php echo C('DATETIMEPICKER_URL');?>/datepicker-zh_cn.js"></script>
