--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP 管理中心 - 编辑商品 </title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="<?php echo C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css" />
-<link href="<?php echo C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css" />
+    <title>ECSHOP 管理中心 - 编辑商品 </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link href="<?php echo C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css"/>
+    <link href="<?php echo C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <h1>
@@ -26,102 +27,71 @@
             <table width="90%" id="general-table" align="center">
                 <tr>
                     <td class="label">商品名称：</td>
-                    <td><input type="text" name="goods_name" value="<{$row.goods_name}>"size="30" />
-                    <span class="require-field">*</span></td>
+                    <td><input type="text" name="goods_name" value="<?php echo $data['goods_name']?>" size="60"/>
+                        <span class="require-field">*</span></td>
                 </tr>
                 <tr>
-                    <td class="label">商品货号： </td>
+                    <td class="label">LOGO：</td>
                     <td>
-                        <input type="text" name="goods_sn" value="<{$row.goods_sn}>" size="20"/>
-                        <span id="goods_sn_notice"></span><br />
-                        <span class="notice-span"id="noticeGoodsSN">如果您不输入商品货号，系统将自动生成一个唯一的货号。</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">商品分类：</td>
-                    <td>
-                        <select name="cat_id">
-                            <option value="0">请选择...</option>
-                            <foreach name="cat_list" item="cat_val">
-                            <option value="<{$cat_val.cat_id}>" <if condition="$cat_val['cat_id'] eq $row['cat_id']"> selected="true"</if> ><{$cat_val.lev|str_repeat='&nbsp;&nbsp;',###}><{$cat_val.cat_name}></option>
-                            </foreach>
-                        </select>
-                        <span class="require-field">*</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">商品品牌：</td>
-                    <td>
-                        <select name="brand_id">
-                            <option value="0">请选择...</option>
-                            <foreach name="brand_list" item="brand_val">
-                            <option value="<{$brand_val.brand_id}>"><{$brand_val.brand_name}></option>
-                            </foreach>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">本店售价：</td>
-                    <td>
-                        <input type="text" name="shop_price" value="<{$row.shop_price}>" size="20"/>
-                        <span class="require-field">*</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">商品数量：</td>
-                    <td>
-                        <input type="text" name="goods_number" size="8" value="<{$row.goods_number}>"/>
-                    </td>
-                </tr>
-                    <td class="label">是否上架：</td>
-                    <td>
-                        <input type="radio" name="is_onsale" value="1" <if condition="$val.is_onsale eq 1"> checked="true" </if> /> 是
-                        <input type="radio" name="is_onsale" value="0" <if condition="$val.is_onsale eq 0"> checked="true" </if> /> 否
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">加入推荐：</td>
-                    <td>
-                        <input type="checkbox" name="is_best" value="1" <if condition="$row.is_best eq  1"> checked="true" </if> /> 精品 
-                        <input type="checkbox" name="is_new" value="1" <if condition="$row.is_new eq  1"> checked="true" </if> /> 新品 
-                        <input type="checkbox" name="is_hot" value="1" <if condition="$row.is_hot eq  1"> checked="true" </if> /> 热销
-                    </td>
-                </tr>
-                <tr>
-                    <td class="label">推荐排序：</td>
-                    <td>
-                        <input type="text" name="sort_order" size="5" value="<{$val.sort_order}>"/>
+                        <img src="/Public/Uploads/<?php echo $data['mid_logo'];?>" size="60"/>
+                        <input type="file" name="logo" size="60"/>
                     </td>
                 </tr>
                 <tr>
                     <td class="label">市场售价：</td>
                     <td>
-                        <input type="text" name="market_price" value="<{$row.market_price}>" size="20" />
+                        <input type="text" name="market_price" value="<?php echo $data['market_price']; ?>" size="20"/>
+                        <span class="require-field">*</span>
                     </td>
                 </tr>
                 <tr>
-                    <td class="label">商品关键词：</td>
+                    <td class="label">本店售价：</td>
                     <td>
-                        <input type="text" name="keywords" value="<{$row.keywords}>" size="40" /> 用空格分隔
+                        <input type="text" name="shop_price" value="<?php echo $data['shop_price']; ?>" size="20"/>
+                        <span class="require-field">*</span>
                     </td>
                 </tr>
                 <tr>
-                    <td class="label">商品简单描述：</td>
+                    <td class="label">是否上架：</td>
                     <td>
-                        <textarea name="goods_brief" cols="40" rows="3"><{$row.goods_brief}></textarea>
+                        <input type="radio" value="是"
+                               name="is_on_sale" <?php if($data['is_on_sale']=='是') echo "checked";?>/>是
+                        <input type="radio" value="否"
+                               name="is_on_sale" <?php if($data['is_on_sale']=='否') echo "checked";?>/>否
                     </td>
                 </tr>
+                <tr>
+                    <td class="label">商品描述：</td>
+                    <td>
+                        <textarea id="goods_desc" name="goods_desc"><?php echo $data['goods_desc']; ?></textarea>
+                    </td>
             </table>
             <div class="button-div">
                 <input type="submit" value=" 确定 " class="button"/>
-                <input type="reset" value=" 重置 " class="button" />
+                <input type="reset" value=" 重置 " class="button"/>
             </div>
         </form>
     </div>
 </div>
 
 <div id="footer">
-共执行 9 个查询，用时 0.025161 秒，Gzip 已禁用，内存占用 3.258 MB<br />
-版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。</div>
+    共执行 9 个查询，用时 0.025161 秒，Gzip 已禁用，内存占用 3.258 MB<br/>
+    版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。
+</div>
 </body>
 </html>
+
+<!--导入在线编辑器 -->
+<link href="<?php echo C('UMEDITOR_URL');?>/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
+<script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/jquery.min.js"></script>
+<script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/template.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="<?php echo C('UMEDITOR_URL');?>/umeditor.config.js"></script>
+<script type="text/javascript" charset="utf-8" src="<?php echo C('UMEDITOR_URL');?>/umeditor.min.js"></script>
+<script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/lang/zh-cn/zh-cn.js"></script>
+<script type="text/javascript">
+    //实例化编辑器
+    var um = UM.getEditor('goods_desc', {
+        initialFrameWidth : "100%",
+        initialFrameHeight : 350
+    });
+</script>
