提交修改资料的页面

--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -34,7 +34,8 @@
                     <td class="label">LOGO：</td>
                     <td>
                         <img src="/Public/Uploads/<?php echo $data['mid_logo'];?>" size="60"/>
-                        <input type="file" name="logo" size="60"/>
+
+                        <p><input type="file" name="logo" size="60"/></p>
                     </td>
                 </tr>
                 <tr>
