提交修改页面的内容

--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -24,6 +24,7 @@
     </div>
     <div id="tabbody-div">
         <form enctype="multipart/form-data" action="__SELF__" method="post">
+            <input type="hidden" name="id" value="<?php echo $data['id']?>"/>
             <table width="90%" id="general-table" align="center">
                 <tr>
                     <td class="label">商品名称：</td>
