--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -1,20 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>ECSHOP 管理中心 - 编辑商品 </title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link href="<?php echo C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css"/>
-    <link href="<?php echo C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<h1>
-    <span class="action-span"><a href="__ROOT__/admin/goods/lst">商品列表</a>
-    </span>
-    <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 编辑商品 </span>
-    <div style="clear:both"></div>
-</h1>
+<layout name="Layout/layout"/>
 
 <div class="tab-div">
     <div id="tabbar-div">
@@ -76,13 +60,6 @@
     </div>
 </div>
 
-<div id="footer">
-    共执行 9 个查询，用时 0.025161 秒，Gzip 已禁用，内存占用 3.258 MB<br/>
-    版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。
-</div>
-</body>
-</html>
-
 <!--导入在线编辑器 -->
 <link href="<?php echo C('UMEDITOR_URL');?>/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/jquery.min.js"></script>
@@ -93,7 +70,7 @@
 <script type="text/javascript">
     //实例化编辑器
     var um = UM.getEditor('goods_desc', {
-        initialFrameWidth : "100%",
-        initialFrameHeight : 350
+        initialFrameWidth: "100%",
+        initialFrameHeight: 350
     });
 </script>
