--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -1,19 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>ECSHOP 管理中心 - 商品列表 </title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link href="<?=C('HOME_CSS_URL');?>/general.css" rel="stylesheet" type="text/css"/>
-    <link href="<?=C('HOME_CSS_URL');?>/main.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<h1>
-    <span class="action-span"><a href="__ROOT__/admin/goods/add">添加新商品</a></span>
-    <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 商品列表 </span>
-    <div style="clear:both"></div>
-</h1>
+<layout name="Layout/layout"/>
 <div class="form-div">
     <form action="__ACTION__" name="searchForm">
         <img src="<?=C('HOME_IMG_URL');?>/icon_search.gif" width="26" height="22" border="0" alt="search"/>
@@ -101,13 +86,6 @@
         <!-- 分页结束 -->
     </div>
 </form>
-
-<div id="footer">
-    共执行 7 个查询，用时 0.028849 秒，Gzip 已禁用，内存占用 3.219 MB<br/>
-    版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。
-</div>
-</body>
-</html>
 
 <!-- 引入时间插件 -->
 <script type="text/javascript" src="<?php echo C('DATETIMEPICKER_URL');?>/jquery-1.7.2.min.js"></script>
