--- a/Application/Admin/View/Brand/lst.html
+++ b/Application/Admin/View/Brand/lst.html
@@ -2,8 +2,9 @@
 <div class="form-div">
     <form action="" name="searchForm">
         <img src="<?php echo C('HOME_IMG_URL');?>/icon_search.gif" width="26" height="22" border="0" alt="search"/>
+        品牌名称：
         <input type="text" name="brand_name" size="15"/>
-        <input type="submit" value=" 搜索 " class="button"/>
+        <input type="submit" value="搜索" class="button"/>
     </form>
 </div>
 <form method="post" action="" name="listForm">
@@ -11,48 +12,31 @@
         <table cellpadding="3" cellspacing="1">
             <tr>
                 <th>品牌名称</th>
-                <th>品牌网址</th>
-                <th>品牌描述</th>
-                <th>排序</th>
-                <th>是否显示</th>
-                <th>操作</th>
+                <th>官方网址</th>
+                <th>品牌Logo</th>
+                <th width="60">操作</th>
             </tr>
-            <tr>
-                <td class="first-cell">
-                    <span style="float:right"><a href="" target="_brank"><img src="" width="16" height="16" border="0"
-                                                                              alt="品牌LOGO"/></a></span>
-                    <span></span>
-                </td>
+            <?php foreach ($data as $k => $v): ?>
+            <tr class="tron">
+                <td><?php echo $v['brand_name']; ?></td>
+                <td><?php echo $v['site_url']; ?></td>
+                <td><?php showImage($v['logo'], 50); ?></td>
                 <td align="center">
-                    <a href="<{$val.site_url}>" target="_brank"></a>
-                </td>
-                <td align="center">公司网站：</td>
-                <td align="center"><span></span></td>
-                <td align="center"><img src=""/></td>
-                <td align="center">
-                    <a href="#" title="编辑">编辑</a> |
-                    <a href="#" title="编辑">移除</a>
+                    <a href="<?php echo U('edit?id='.$v['id'].'&p='.I('get.p')); ?>" title="编辑">编辑</a> |
+                    <a href="<?php echo U('delete?id='.$v['id'].'&p='.I('get.p')); ?>"
+                       onclick="return confirm('确定要删除吗？');" title="移除">移除</a>
                 </td>
             </tr>
+            <?php endforeach; ?>
+            <?php if(preg_match('/\d/', $page)): ?>
             <tr>
-                <td align="right" nowrap="true" colspan="6">
-                    <div id="turn-page">
-                        总计 <span id="totalRecords">11</span>
-                        个记录分为 <span id="totalPages">1</span>
-                        页当前第 <span id="pageCurrent">1</span>
-                        页，每页 <input type='text' size='3' id='pageSize' value="15"/>
-                        <span id="page-link">
-                            <a href="#">第一页</a>
-                            <a href="#">上一页</a>
-                            <a href="#">下一页</a>
-                            <a href="#">最末页</a>
-                            <select id="gotoPage">
-                                <option value='1'>1</option>
-                            </select>
-                        </span>
-                    </div>
-                </td>
+                <td align="right" nowrap="true" colspan="99" height="30"><?php echo $page; ?></td>
             </tr>
+            <?php endif; ?>
         </table>
     </div>
 </form>
+<script>
+</script>
+
+<script src="<?php echo C('HOME_JS_URL');?>/tron.js"></script>
