--- a/Application/Admin/View/Brand/add.html
+++ b/Application/Admin/View/Brand/add.html
@@ -1,48 +1,27 @@
 <layout name="Layout/layout"/>
 <div class="main-div">
-    <form method="post" action="__GROUP__/Brand/brandAdd" enctype="multipart/form-data">
-        <table cellspacing="1" cellpadding="3" width="100%">
+    <form name="main_form" method="POST" action="__SELF__" enctype="multipart/form-data">
+        <table align="center" valign="middle" cellspacing="1" cellpadding="3" width="100%">
             <tr>
-                <td class="label">品牌名称</td>
+                <td class="label">品牌名称：</td>
                 <td>
-                    <input type="text" name="brand_name" maxlength="60" value=""/>
-                    <span class="require-field">*</span>
+                    <input type="text" name="brand_name" value=""/>
                 </td>
             </tr>
             <tr>
-                <td class="label">品牌网址</td>
+                <td class="label">官方网址：</td>
                 <td>
-                    <input type="text" name="site_url" maxlength="60" size="40" value=""/>
+                    <input type="text" name="site_url" value=""/>
                 </td>
             </tr>
             <tr>
-                <td class="label">品牌LOGO</td>
+                <td class="label">品牌Logo：</td>
                 <td>
-                    <input type="file" name="brand_logo" id="logo" size="45" disabled="false"><br/>
-                    <span class="notice-span" style="display:block" id="warn_brandlogo">请上传图片，做为品牌的LOGO！</span>
+                    <input type="file" name="logo"/>
                 </td>
             </tr>
             <tr>
-                <td class="label">品牌描述</td>
-                <td>
-                    <textarea name="brand_desc" cols="60" rows="4"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td class="label">排序</td>
-                <td>
-                    <input type="text" name="sort_order" maxlength="40" size="15" value="50"/>
-                </td>
-            </tr>
-            <tr>
-                <td class="label">是否显示</td>
-                <td>
-                    <input type="radio" name="is_show" value="1" checked="checked"/> 是
-                    <input type="radio" name="is_show" value="0"/> 否(当品牌下还没有商品的时候，首页及分类页的品牌区将不会显示该品牌。)
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2" align="center"><br/>
+                <td colspan="99" align="center">
                     <input type="submit" class="button" value=" 确定 "/>
                     <input type="reset" class="button" value=" 重置 "/>
                 </td>
@@ -50,3 +29,7 @@
         </table>
     </form>
 </div>
+
+
+<script>
+</script>
