--- a/Application/Admin/View/Brand/lst.html
+++ b/Application/Admin/View/Brand/lst.html
@@ -19,7 +19,7 @@
             <?php foreach ($data as $k => $v): ?>
             <tr class="tron">
                 <td><?php echo $v['brand_name']; ?></td>
-                <td><?php echo $v['site_url']; ?></td>
+                <td><a target="_blank" href="<?php echo $v['site_url']; ?>"><?php echo $v['site_url']; ?></a></td>
                 <td><?php showImage($v['logo'], 50); ?></td>
                 <td align="center">
                     <a href="<?php echo U('edit?id='.$v['id'].'&p='.I('get.p')); ?>" title="编辑">编辑</a> |
