--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -11,6 +11,19 @@
             <input type="hidden" name="id" value="<?php echo $data['id']?>"/>
             <table width="90%" id="general-table" align="center">
                 <tr>
+                    <td class="label">所在品牌：</td>
+                    <td>
+                        <select name="brand_id">
+                            <option value="">请选择</option>
+                            <?php foreach($brandData as $key => $value):?>
+                                <option value="<?php echo $value['id'];?>">
+                                    <?php echo $value['brand_name'];?>
+                                </option>
+                            <?php endforeach;?>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
                     <td class="label">商品名称：</td>
                     <td><input type="text" name="goods_name" value="<?php echo $data['goods_name']?>" size="60"/>
                         <span class="require-field">*</span></td>
