--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -4,18 +4,7 @@
         <img src="<?=C('HOME_IMG_URL');?>/icon_search.gif" width="26" height="22" border="0" alt="search"/>
         <p>
             所在品牌：
-            <select name="brand_id">
-                <option value="">请选择</option>
-                <?php foreach($brandData as $key => $value):?>
-                <option value="<?php echo $value['id'];?>"
-                    <?php if($value['id'] == I('get.brand_id')):?>
-                        selected="selected"
-                    <?php endif;?>
-                >
-                    <?php echo $value['brand_name'];?>
-                </option>
-                <?php endforeach;?>
-            </select>
+            <?php buildSelect('brand','brand_id','id','brand_name',I('get.brand_id'));?>
         </p>
         <!--商品名称-->
         <p>
