会员级别内容

--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -154,11 +154,10 @@ body {
                 </ul>
             </li>
             <li class="explode" key="08_members" name="menu">
-            会员管理
+            会员级别管理
                 <ul>
-                    <li class="menu-item"><a href="userList.html" target="main-frame">会员列表</a></li>
-                    <li class="menu-item"><a href="userAdd.html" target="main-frame">添加会员</a></li>
-                    <li class="menu-item"><a href="userMessage.html" target="main-frame">会员留言</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/memberLevel/lst" target="main-frame">会员级别列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/memberLevel/add" target="main-frame">添加会员级别</a></li>
                 </ul>
             </li>
         </ul>
