--- a/Application/Admin/View/MemberLevel/lst.html
+++ b/Application/Admin/View/MemberLevel/lst.html
@@ -16,14 +16,14 @@
                 <th>积分上限</th>
                 <th width="60">操作</th>
             </tr>
-            <?php foreach (mlData as $k => $v): ?>
+            <?php foreach ($mlData as $k => $v): ?>
             <tr class="tron">
-                <td><?php echo $v['brand_name']; ?></td>
-                <td><?php echo $v['jifen_bottom']; ?></td>
-                <td><?php echo $v['jifen_top']; ?></td>
+                <td align="center"><?php echo $v['level_name']; ?></td>
+                <td align="center"><?php echo $v['jifen_bottom']; ?></td>
+                <td align="center"><?php echo $v['jifen_top']; ?></td>
                 <td align="center">
-                    <a href="<?php echo U('edit?id='.$v['id'].'&p='.I('get.p')); ?>" title="编辑">编辑</a> |
-                    <a href="<?php echo U('delete?id='.$v['id'].'&p='.I('get.p')); ?>"
+                    <a href="<?php echo U('edit?id='.$v['id']); ?>" title="编辑">编辑</a> |
+                    <a href="<?php echo U('delete?id='.$v['id']); ?>"
                        onclick="return confirm('确定要删除吗？');" title="移除">移除</a>
                 </td>
             </tr>
