添加网页内容

--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -24,14 +24,14 @@
                 <tr>
                     <td class="label">本店价格：</td>
                     <td>
-                        <input type="text" name="shop_price" value="0" size="20"/>
+                        <input type="text" name="shop_price" value="" size="20"/>
                         <span class="require-field">*</span>
                     </td>
                 </tr>
                 <tr>
                     <td class="label">市场价格：</td>
                     <td>
-                        <input type="text" name="market_price" value="0" size="20"/>
+                        <input type="text" name="market_price" value="" size="20"/>
                         <span class="require-field">*</span>
                     </td>
                 </tr>
