添加和修改页面修改的内容

--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -63,12 +63,6 @@
                         <input type="radio" name="is_on_sale" value="否"/> 否
                     </td>
                 </tr>
-                <tr>
-                    <td class="label">商品图片：</td>
-                    <td>
-                        <input type="file" name="logo" size="60"/>
-                    </td>
-                </tr>
                 </tbody>
             </table>
 
@@ -105,7 +99,14 @@
 
             <!-- 商品相册 -->
             <table width="90%" id="gallery-table" style="display: none;" align="center">
-                <tbody></tbody>
+                <tbody>
+                <tr>
+                    <td class="label">商品图片：</td>
+                    <td>
+                        <input type="file" name="logo" size="60"/>
+                    </td>
+                </tr>
+                </tbody>
             </table>
 
             <div class="button-div">
