--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -1,15 +1,25 @@
 <layout name="Layout/layout"/>
 
 <div class="tab-div">
+    <!-- tab bar -->
     <div id="tabbar-div">
         <p>
             <span class="tab-front" id="general-tab">通用信息</span>
+            <span class="tab-back" id="detail-tab">商品描述</span>
+            <span class="tab-back" id="mix-tab">会员价格</span>
+            <span class="tab-back" id="properties-tab">商品属性</span>
+            <span class="tab-back" id="gallery-tab">商品相册</span>
         </p>
     </div>
+
+    <!-- tab body -->
     <div id="tabbody-div">
-        <form enctype="multipart/form-data" action="__SELF__" method="post">
-            <input type="hidden" name="id" value="<?php echo $data['id']?>"/>
-            <table width="90%" id="general-table" align="center">
+        <form enctype="multipart/form-data" action="__ROOT__/admin/goods/add" method="post" name="theForm">
+            <input type="hidden" name="MAX_FILE_SIZE" value="2097152">
+
+            <!-- 通用信息 -->
+            <table width="90%" id="general-table" align="center" style="display: table;">
+                <tbody>
                 <tr>
                     <td class="label">所在品牌：</td>
                     <td>
@@ -20,14 +30,6 @@
                     <td class="label">商品名称：</td>
                     <td><input type="text" name="goods_name" value="<?php echo $data['goods_name']?>" size="60"/>
                         <span class="require-field">*</span></td>
-                </tr>
-                <tr>
-                    <td class="label">LOGO：</td>
-                    <td>
-                        <img src="/Public/Uploads/<?php echo $data['mid_logo'];?>" size="60"/>
-
-                        <p><input type="file" name="logo" size="60"/></p>
-                    </td>
                 </tr>
                 <tr>
                     <td class="label">市场售价：</td>
@@ -43,45 +45,165 @@
                         <span class="require-field">*</span>
                     </td>
                 </tr>
-                <tr>
-                    <td class="label">会员价格：</td>
-                    <td>
-                        <?php foreach($mlData as $k => $v):?>
-                        <?php echo $v['level_name']?>:&nbsp;¥&nbsp;<input type="text"
-                                                                          name="member_price[<?php echo $v['id'];?>]"
-                        <?php foreach($mpData as $k2 => $v2):?>
-                        <?php if($v2['level_id'] == $v['id']):?>
-                        <?php echo "value='".$v2['price']."'";?>
-                        <?php endif;?>
-                        <?php endforeach;?>
-                        size="8"/>元<br/>
-                        <?php endforeach;?>
-                    </td>
-                </tr>
+                <!--<tr>-->
+                <!--<td class="label">会员价格：</td>-->
+                <!--<td>-->
+                <!--<?php foreach($mlData as $k => $v):?>-->
+                <!--<?php echo $v['level_name']?>:&nbsp;¥&nbsp;<input type="text"-->
+                <!--name="member_price[<?php echo $v['id'];?>]"-->
+                <!--size="8"/>元<br/>-->
+                <!--<?php endforeach;?>-->
+                <!--</td>-->
+                <!--</tr>-->
                 <tr>
                     <td class="label">是否上架：</td>
                     <td>
-                        <input type="radio" value="是"
-                               name="is_on_sale" <?php if($data['is_on_sale']=='是') echo "checked";?>/>是
-                        <input type="radio" value="否"
-                               name="is_on_sale" <?php if($data['is_on_sale']=='否') echo "checked";?>/>否
+                        <input type="radio" name="is_on_sale" value="是"/> 是
+                        <input type="radio" name="is_on_sale" value="否"/> 否
                     </td>
                 </tr>
-                <tr>
-                    <td class="label">商品描述：</td>
-                    <td>
-                        <textarea id="goods_desc" name="goods_desc"><?php echo $data['goods_desc']; ?></textarea>
-                    </td>
+                </tbody>
             </table>
+
+            <!-- 商品描述 -->
+            <table width="90%" id="detail-table" style="display: none;">
+                <tbody>
+                <tr>
+                    <td class="label">
+                        <textarea id="goods_desc" name="goods_desc" cols="40" rows="3"></textarea>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <!-- 会员价格 -->
+            <table width="90%" id="mix-table" style="display: none;" align="center">
+                <tbody>
+                <tr>
+                    <td align="center" width="200">
+                        <?php foreach($mlData as $k => $v):?>
+                        <?php echo $v['level_name']?>:&nbsp;¥&nbsp;<input type="text"
+                                                                          name="member_price[<?php echo $v['id'];?>]"
+                                                                          size="8"/>元<br/>
+                        <?php endforeach;?>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <!-- 商品属性 -->
+            <table width="90%" id="properties-table" style="display: none;" align="center">
+                <tbody></tbody>
+            </table>
+
+            <!-- 商品相册 -->
+            <table width="90%" id="gallery-table" style="display: none;" align="center">
+                <tbody>
+                <tr>
+                    <td class="label">商品图片：</td>
+                    <td>
+                        <img src="/Public/Uploads/<?php echo $data['mid_logo'];?>" size="60"/>
+
+                        <p><input type="file" name="logo" size="60"/></p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
             <div class="button-div">
-                <input type="submit" value=" 确定 " class="button"/>
-                <input type="reset" value=" 重置 " class="button"/>
+                <input type="hidden" name="goods_id" value="32">
+                <input type="submit" value="确定" class="button">
+                <input type="reset" value="重置" class="button">
             </div>
         </form>
     </div>
 </div>
 
-<!--导入在线编辑器 -->
+<iframe src="" frameborder="0" width="0" height="0" id="ifr"></iframe>
+<script type="text/javascript" src="<?php echo C('HOME_JS_URL');?>/tab.js"></script>
+<script type="text/javascript">
+    function addImg(obj) {
+        var src = obj.parentNode.parentNode;
+        var idx = rowindex(src);
+        var tbl = document.getElementById('gallery-table');
+        var row = tbl.insertRow(idx + 1);
+        var cell = row.insertCell(-1);
+        cell.innerHTML = src.cells[0].innerHTML.replace(/(.*)(addImg)(.*)(\[)(\+)/i, "$1removeImg$3$4-");
+    }
+
+    function removeImg(obj) {
+        var row = rowindex(obj.parentNode.parentNode);
+        var tbl = document.getElementById('gallery-table');
+        tbl.deleteRow(row);
+    }
+
+    function dropImg(imgId) {
+        Ajax.call('goods.php?is_ajax=1&act=drop_image', "img_id=" + imgId, dropImgResponse, "GET", "JSON");
+    }
+
+    function dropImgResponse(result) {
+        if (result.error == 0) {
+            document.getElementById('gallery_' + result.content).style.display = 'none';
+        }
+    }
+
+    //增加一个属性行
+    function addSpec(obj) {
+        var src = obj.parentNode.parentNode;
+        var idx = rowindex(src);
+        var tbl = document.getElementById('attrTable');
+        var row = tbl.insertRow(idx + 1);
+        var cell1 = row.insertCell(-1);
+        var cell2 = row.insertCell(-1);
+        var regx = /<a([^>]+)<\/a>/i;
+
+        cell1.className = 'label';
+        cell1.innerHTML = src.childNodes[0].innerHTML.replace(/(.*)(addSpec)(.*)(\[)(\+)/i, "$1removeSpec$3$4-");
+        cell2.innerHTML = src.childNodes[1].innerHTML.replace(/readOnly([^\s|>]*)/i, '');
+    }
+
+    /**
+     * 删除一个属性行
+     */
+    function removeSpec(obj) {
+        var row = rowindex(obj.parentNode.parentNode);
+        var tbl = document.getElementById('attrTable');
+
+        tbl.deleteRow(row);
+    }
+
+    /**
+     * 处理
+     */
+    function handleSpec() {
+        var elementCount = document.forms['theForm'].elements.length;
+        for (var i = 0; i < elementCount; i++) {
+            var element = document.forms['theForm'].elements[i];
+            if (element.id.substr(0, 5) == 'spec_') {
+                var optCount = element.options.length;
+                var value = new Array(optCount);
+                for (var j = 0; j < optCount; j++) {
+                    value[j] = element.options[j].value;
+                }
+
+                var hiddenSpec = document.getElementById('hidden_' + element.id);
+                hiddenSpec.value = value.join(String.fromCharCode(13)); // 鐢ㄥ洖杞﹂敭闅斿紑姣忎釜瑙勬牸
+            }
+        }
+        return true;
+    }
+
+    //使用iframe动态获取属性
+    function getAttrList(type_id) {
+        var ifr = document.getElementById('ifr');
+        ifr.src = "index.php?p=admin&c=attribute&a=getAttrs&type_id=" + type_id;
+    }
+
+</script>
+<script type="text/javascript" src="<?php echo C('HOME_JS_URL');?>/utils.js"></script>
+<script type="text/javascript" src="<?php echo C('HOME_JS_URL');?>/selectzone.js"></script>
+<script type="text/javascript" src="<?php echo C('HOME_JS_URL');?>/colorselector.js"></script>
+<!--添加在线编辑器的JS文件-->
 <link href="<?php echo C('UMEDITOR_URL');?>/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/jquery.min.js"></script>
 <script type="text/javascript" src="<?php echo C('UMEDITOR_URL');?>/third-party/template.min.js"></script>
@@ -91,7 +213,7 @@
 <script type="text/javascript">
     //实例化编辑器
     var um = UM.getEditor('goods_desc', {
-        initialFrameWidth: "100%",
-        initialFrameHeight: 350
+        initialFrameWidth: "100%",//初始化编辑器宽度,默认500
+        initialFrameHeight: 500  //初始化编辑器高度,默认500
     });
 </script>
