添加页面内容

--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -14,7 +14,7 @@
 
     <!-- tab body -->
     <div id="tabbody-div">
-        <form enctype="multipart/form-data" action="__ROOT__/admin/goods/add" method="post" name="theForm">
+        <form enctype="multipart/form-data" action="__SELF__" method="post" name="theForm">
             <input type="hidden" name="MAX_FILE_SIZE" value="2097152">
 
             <!-- 通用信息 -->
