--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -119,7 +119,7 @@
                     <td class="label">商品展示图片：</td>
                     <td>
                         <ul id="ul_add_pic" style="list-style: none;">
-                            <li><input type="file" value="goods_pics[]"/></li>
+                            <li><input type="file" name="goods_pics[]"/></li>
                         </ul>
                     </td>
                 </tr>
