添加并修改左侧菜单的功能项显示

--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -126,33 +126,34 @@ body {
             <li class="explode" key="02_cat_and_goods" name="menu">
             商品管理
                 <ul>
-                    <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/goods/add" target="main-frame">商品添加</a></li>
-                    <li class="menu-item"><a href="categoryList.html" target="main-frame">商品分类</a></li>
-                    <li class="menu-item"><a href="brandList.html" target="main-frame">商品品牌</a></li>
-                    <li class="menu-item"><a href="goodsTrash.html" target="main-frame">商品回收站</a></li>
-                </ul>
-            </li>
-            <li class="explode" key="03_brand" name="menu">
-                品牌管理
-                <ul>
+                    <li class="menu-item"><a href="__ROOT__/admin/category/lst" target="main-frame">分类列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/category/add" target="main-frame">分类添加</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>
                     <li class="menu-item"><a href="__ROOT__/admin/brand/add" target="main-frame">品牌添加</a></li>
-                    <li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>
-                    <li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>
-                    <li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/goods/add" target="main-frame">商品添加</a></li>
                 </ul>
             </li>
-            <li class="explode" key="04_order" name="menu">
-            订单管理
-                <ul>
-                    <li class="menu-item"><a href="orderList.html" target="main-frame">订单列表</a></li>
-                    <li class="menu-item"><a href="orderQuery.html" target="main-frame">订单查询</a></li>
-                    <li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>
-                    <li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>
-                    <li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>
-                </ul>
-            </li>
+            <!--<li class="explode" key="03_brand" name="menu">-->
+                <!--品牌管理-->
+                <!--<ul>-->
+                    <!--<li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>-->
+                    <!--<li class="menu-item"><a href="__ROOT__/admin/brand/add" target="main-frame">品牌添加</a></li>-->
+                    <!--<li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>-->
+                    <!--<li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>-->
+                    <!--<li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
+            <!--<li class="explode" key="04_order" name="menu">-->
+            <!--订单管理-->
+                <!--<ul>-->
+                    <!--<li class="menu-item"><a href="orderList.html" target="main-frame">订单列表</a></li>-->
+                    <!--<li class="menu-item"><a href="orderQuery.html" target="main-frame">订单查询</a></li>-->
+                    <!--<li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>-->
+                    <!--<li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>-->
+                    <!--<li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
             <li class="explode" key="08_members" name="menu">
             会员级别管理
                 <ul>
