--- a/Application/Admin/View/Category/add.html
+++ b/Application/Admin/View/Category/add.html
@@ -5,7 +5,7 @@
             <tr>
                 <td class="label">商品分类名称:</td>
                 <td>
-                    <select>
+                    <select name="parent_id">
                         <option value="0">顶级分类</option>
                         <?php foreach($catData as $key => $value):?>
                         <option value="<?php echo $value['id']?>"><?php echo str_repeat('-',8*$value['level']).$value['cat_name'];?></option>
