--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -21,6 +21,18 @@
             <table width="90%" id="general-table" align="center" style="display: table;">
                 <tbody>
                 <tr>
+                    <td class="label">商品分类: </td>
+                    <td>
+                        <!--添加商品的分类-->
+                        <select name="cat_id">
+                            <option value="">请选择分类</option>
+                            <?php foreach($catDatas as $key => $value):?>
+                            <option value="<?php echo $value['id'];?>"><?php echo str_repeat('-',8*$value['level']).$value['cat_name'];?></option>
+                            <?php endforeach;?>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
                     <td class="label">所在品牌：</td>
                     <td>
                         <?php buildSelect('brand','brand_id','id','brand_name');?>
